// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component renders 1`] = `
@media  {
  .c-fkcdpq {
    display: flex;
    flex-direction: column;
    padding-top: var(--space-4);
    padding-left: var(--space-2);
    padding-right: var(--space-2);
  }

  .c-bVBcpu {
    flex-shrink: 0;
    display: flex;
  }

  .c-ehnQBI {
    text-transform: uppercase;
    cursor: pointer;
    flex-shrink: 0;
    font-family: var(--fonts-body);
    padding: var(--space-4);
    -webkit-user-select: none;
    user-select: none;
    transition: 0.3s;
  }

  .c-eGaVeY {
    flex-grow: 1;
  }
}

@media  {
  .c-fkcdpq-clEueN-theme-light div[role="tab"] {
    background: white;
  }

  .c-fkcdpq-clEueN-theme-light div[role="tab"][data-state="active"] {
    color: var(--colors-primary);
    text-shadow: 0px 0px 1px currentColor;
    box-shadow: inset 0 -2px 0 0 currentColor;
  }

  .c-fkcdpq-clEueN-theme-light div[role="tab"][data-state="inactive"] {
    color: var(--colors-tonal500);
  }

  .c-fkcdpq-clEueN-theme-light div[role="tab"]:hover {
    color: var(--colors-primary);
    background: rgba(30,113,246,0.1);
  }

  .c-fkcdpq-clEueN-theme-light div[role="tab"]:active {
    color: var(--colors-primary);
    background: rgba(30,113,246,0.2);
    box-shadow: none;
  }

  .c-fkcdpq-clEueN-theme-light div[role="tab"]:focus {
    color: var(--colors-primary);
    box-shadow: inset 0 0 0 2px currentColor;
  }

  .c-fkcdpq-clEueN-theme-light div[role="tab"][data-disabled],
  .c-fkcdpq-clEueN-theme-light div[role="tab"][data-disabled]:hover {
    color: var(--colors-tonal200);
    cursor: default;
  }

  .c-fkcdpq-clEueN-theme-light div[role="tabpanel"] {
    background: white;
    color: var(--colors-textForeground);
    font-family: var(--fonts-body);
  }

  .c-fkcdpq-clEueN-theme-light div[role="tablist"] {
    border-bottom: 1px solid var(--colors-primaryDark);
  }

  .c-fkcdpq-clEueN-theme-light button[role="scrollbar"] {
    background: white;
    opacity: 0.8;
  }
}

<div>
  <div
    class="c-fkcdpq c-fkcdpq-clEueN-theme-light"
    data-orientation="horizontal"
  >
    <div
      aria-orientation="horizontal"
      class="c-bVBcpu"
      data-orientation="horizontal"
      dir="ltr"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <div
        aria-controls="radix-id-0-1-content-tab1"
        aria-selected="true"
        class="c-ehnQBI"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="active"
        id="radix-id-0-1-trigger-tab1"
        role="tab"
        tabindex="-1"
      >
        Trigger 1
      </div>
      <div
        aria-controls="radix-id-0-1-content-tab2"
        aria-selected="false"
        class="c-ehnQBI"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-id-0-1-trigger-tab2"
        role="tab"
        tabindex="-1"
      >
        Trigger 2
      </div>
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab1"
      class="c-eGaVeY"
      data-orientation="horizontal"
      data-state="active"
      id="radix-id-0-1-content-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab2"
      class="c-eGaVeY"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-id-0-1-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs component renders mobile view 1`] = `
@media  {
  .c-fkcdpq {
    display: flex;
    flex-direction: column;
    padding-top: var(--space-4);
    padding-left: var(--space-2);
    padding-right: var(--space-2);
  }

  .c-bVBcpu {
    flex-shrink: 0;
    display: flex;
  }

  .c-ehnQBI {
    text-transform: uppercase;
    cursor: pointer;
    flex-shrink: 0;
    font-family: var(--fonts-body);
    padding: var(--space-4);
    -webkit-user-select: none;
    user-select: none;
    transition: 0.3s;
  }

  .c-eGaVeY {
    flex-grow: 1;
  }

  .c-dhzjXW {
    display: flex;
  }
}

@media  {
  .c-fkcdpq-clEueN-theme-light div[role="tab"] {
    background: white;
  }

  .c-fkcdpq-clEueN-theme-light div[role="tab"][data-state="active"] {
    color: var(--colors-primary);
    text-shadow: 0px 0px 1px currentColor;
    box-shadow: inset 0 -2px 0 0 currentColor;
  }

  .c-fkcdpq-clEueN-theme-light div[role="tab"][data-state="inactive"] {
    color: var(--colors-tonal500);
  }

  .c-fkcdpq-clEueN-theme-light div[role="tab"]:hover {
    color: var(--colors-primary);
    background: rgba(30,113,246,0.1);
  }

  .c-fkcdpq-clEueN-theme-light div[role="tab"]:active {
    color: var(--colors-primary);
    background: rgba(30,113,246,0.2);
    box-shadow: none;
  }

  .c-fkcdpq-clEueN-theme-light div[role="tab"]:focus {
    color: var(--colors-primary);
    box-shadow: inset 0 0 0 2px currentColor;
  }

  .c-fkcdpq-clEueN-theme-light div[role="tab"][data-disabled],
  .c-fkcdpq-clEueN-theme-light div[role="tab"][data-disabled]:hover {
    color: var(--colors-tonal200);
    cursor: default;
  }

  .c-fkcdpq-clEueN-theme-light div[role="tabpanel"] {
    background: white;
    color: var(--colors-textForeground);
    font-family: var(--fonts-body);
  }

  .c-fkcdpq-clEueN-theme-light div[role="tablist"] {
    border-bottom: 1px solid var(--colors-primaryDark);
  }

  .c-fkcdpq-clEueN-theme-light button[role="scrollbar"] {
    background: white;
    opacity: 0.8;
  }
}

@media  {
  .c-dhzjXW-icmpvrW-css {
    position: relative;
  }

  .c-bVBcpu-ifwuxZe-css {
    width: 100%;
    overflow-x: auto;
  }

  .c-bVBcpu-ifwuxZe-css::-webkit-scrollbar {
    display: none;
  }
}

<div>
  <div
    class="c-fkcdpq c-fkcdpq-clEueN-theme-light"
    data-orientation="horizontal"
  >
    <div
      class="c-dhzjXW c-dhzjXW-icmpvrW-css"
    >
      <div
        aria-orientation="horizontal"
        class="c-bVBcpu c-bVBcpu-ifwuxZe-css"
        data-orientation="horizontal"
        dir="ltr"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <div
          aria-controls="radix-id-0-1-content-tab1"
          aria-selected="true"
          class="c-ehnQBI"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-id-0-1-trigger-tab1"
          role="tab"
          tabindex="-1"
        >
          Trigger 1 which is going to be long
        </div>
        <div
          aria-controls="radix-id-0-1-content-tab2"
          aria-selected="false"
          class="c-ehnQBI"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-id-0-1-trigger-tab2"
          role="tab"
          tabindex="-1"
        >
          Trigger 2 which is going to be even longer
        </div>
      </div>
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab1"
      class="c-eGaVeY"
      data-orientation="horizontal"
      data-state="active"
      id="radix-id-0-1-content-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab2"
      class="c-eGaVeY"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-id-0-1-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;
